   upon failure to find correct interperter; document everything.

 - We now include our own YAML.pm work-alike that we can use when the
   real YAML isn't installed.  We might soon even start using it when
   YAML is installed, because the YAML API and dependency chain have
   been changing in unfavorable ways lately. [Stephen Adkins]

0.27_09  Sat Mar 11 22:48:54 EST 2006

 - Fixed find_perl_interpreter() so we can find the perl executable
   when running from uninstalled perl even when $^X contains a
   relative path. [Yitzchak Scott-Thoennes]

 - Fixed warning message where we were printing the wrong field names.
   [Chris Dolan]

 - Added a 'testpodcoverage' action that runs a POD coverage check for
   all modules in the distribution. [Yanick Champoux]

 - Added a Cookbook example of subclassing to modify an action. [Dylan
   Martin and David Golden]

 - When building HTML documentation, we were opening the POD file and
   not checking whether the open succeeded, which of course caused
   problems down the line if it failed.  Now we do "or die(...)" like
   everywhere else. [Spotted by Joerg Braun]

0.27_08  Fri Mar  3 21:22:41 CST 2006

 - Due to shell quoting issues and differences in syntax between
   various flavors of Windows, the code for the 'pl2bat' utility
   distributed with Perl has been incorporated into M::B::P::Windows.
   [Thanks to Dr Bean and Ron Savage for help testing and isolating
   the problem.]

 - Modify add_build_element() so that it only adds elements if they
   don't already exist. [David Wheeler]

 - Fixed a bug in the 'pass-through' Makefile.PL in which we would die
   if CPAN::Shell->install returned false, but apparently this return
   value is unreliable.  Now we only die if the module is actually
   unavailable after installation.

 - Fixed testing problems on VMS related to non-case-preserving
   filesystems.  We now bundle Tie::CPHash in the distribution (just
   for testing purposes, it doesn't get installed) to help with